<resources>
    <string name="app_name">MyGo</string>
    <string name="title_activity_mygo_greeting">MygoGreeting</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome">Welcome</string>
    <string name="hi_huang">
        Hi,
          HUANG
    </string>
    <string name="attraction">
        Attraction
    </string>
    <string name="hotel">
        Hotel
    </string>

    <string name="attraction_recommend">
        Attraction recommendation for you
    </string>
    <string name="mount_bromo">mount_bromo</string>
    <string name="volcano_in">volcano_in_</string>
    <string name="Mount_Bromo">Mount Bromo</string>
    <string name="volcano_in_east_java">Volcano in East Java</string>
    <string name="_4_9">4.9</string>
    <string name="start_from">Start from</string>
    <string name="book">Book</string>
    <string name="flight">Flight</string>

    <string name="hotels_reco">
        Hotels recommendation for you</string>
    <string name="see_all">see all</string>
    <string name="swiss_belho">Swiss-Belhotel Rainforest Kuta</string>
    <string name="jl_sunset_r"><![CDATA[Jl. Sunset Road No. 101, Kuta, Bali , Indonesia]]></string>
    <string name="star_hotel">4-star hotel</string>
    <string name="night">$ 50/night</string>
    <string name="booking_id">Booking ID</string>
    <string name="sentosa_air">Sentosa Air · Economy · Direct</string>
    <string name="cgk">CGK</string>
    <string name="_05_30">05:30</string>
    <string name="dps">DPS</string>
    <string name="_06_30">06:30</string>
    <string name="upcoming">Upcoming</string>
    <string name="_24_march_2024">24 March 2024</string>
    <string name="discover_extraordinary_comfort_in_hotels">Discover Extraordinary Comfort in Hotels</string>
    <string name="coeurdes_alpes">Coeurdes Alpes</string>
    <string name="attractions">Attractions</string>
    <string name="flights">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="input">Input</string>
    <string name="check_in_now_gate_d34">Check in now - Gate D34</string>
    <string name="your_flight">Your flight SQ805 from Beijing to Singapore has started, gate D34, please register in time to avoid delay</string>
    <string name="some_id">2025/01/23  14:55</string>
    <string name="upcoming_flight">Upcoming Flight</string>
    <string name="notication_card_description">Your flight SQ12138 is out of data! \nTime of taking off at :  8:30 , 8th April</string>
    <string name="me">Me</string>
    <string name="huang">Huang</string>
    <string name="attraction_name">Attraction Name</string>
    <string name="upcoming_booking">Upcoming Booking</string>
    <string name="travel_history">Travel History</string>
    <string name="itineraries">Itineraries</string>
    <string name="recent">Recent</string>
    <string name="log_out">Log out</string>

    <string name="passengers">Passengers</string>
    <string name="economy">Economy</string>

    <string-array name="passenger_options">
        <item>1 Passenger</item>
        <item>2 Passengers</item>
        <item>3 Passengers</item>
        <item>4 Passengers</item>
        <item>5 Passengers</item>
    </string-array>

    <string-array name="class_options">
        <item>Economy</item>
        <item>Premium Economy</item>
        <item>Business</item>
        <item>First Class</item>
    </string-array>

</resources>