<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rectangle_9"
    android:layout_width="161dp"
    android:layout_height="238dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:background="@drawable/rectangle_9"
    android:elevation="13dp"
    android:clipToOutline="true">


    <ImageView
        android:id="@+id/attraction_image"
        android:layout_width="179dp"
        android:layout_height="175.11dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-8dp"
        android:layout_marginTop="-53dp"
        android:scaleType="centerCrop"
        android:src="@drawable/main1_image3" />

    <TextView
        android:id="@+id/attraction_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="120dp"
        android:maxHeight="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="127dp"
        android:gravity="top"
        android:text="@string/Mount_Bromo"
        android:textColor="#336749"
        android:textSize="14sp"
        android:textAppearance="@style/inter_medium" />

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <TextView
        android:id="@+id/attraction_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_below="@+id/attraction_name"
        android:layout_marginTop="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="38dp"
        android:gravity="top"
        android:text="@string/volcano_in_east_java"
        android:textColor="#6C757D"
        android:textSize="9sp"
        android:fontFamily="@font/inter_18pt_medium"/>
    <RelativeLayout
        android:id="@+id/attraction_star"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_below="@+id/attraction_image"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/attraction_rate"
        android:layout_marginEnd="5dp"
        android:background="@drawable/material_symbols_star"
        android:clipToOutline="true" />

    <TextView
        android:id="@+id/attraction_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attraction_image"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:text="@string/_4_9"
        android:textColor="#6C757D"
        android:textSize="12sp" />

<!--    <TextView-->
<!--        android:id="@+id/star_from"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="8dp"-->
<!--        android:layout_marginTop="191dp"-->
<!--        android:gravity="top"-->
<!--        android:text="@string/start_from"-->
<!--        android:textColor="#6C757D"-->
<!--        android:textSize="10sp" />-->

    <TextView
        android:id="@+id/attraction_price"
        android:layout_width="wrap_content"
        android:maxWidth="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="$ 150/pax"
        android:fontFamily="@font/inter_18pt_medium"
        android:gravity="top"
        android:textColor="#336749"
        android:maxLines="1"
        android:ellipsize="end"
        />


    <RelativeLayout
        android:id="@+id/status"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="205dp"
        android:background="@drawable/status"
        android:clipToOutline="true">

        <TextView
            android:id="@+id/booking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/book"
            android:fontFamily="@font/inter_18pt_medium"
            android:lineSpacingExtra="6sp"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            />

    </RelativeLayout>
</RelativeLayout>
