<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main_head"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:background="@drawable/main_head"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/main_head_shape01"
            android:layout_width="247dp"
            android:layout_height="113dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="-67dp"
            android:background="@drawable/main_background_shape1" />

        <ImageView
            android:id="@+id/main_head_shape02"
            android:layout_width="146dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="265dp"
            android:layout_marginTop="-20dp"
            android:background="@drawable/main_background_shape2" />

        <TextView
            android:id="@+id/notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:gravity="top"
            android:text="Notification"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:textAppearance="@style/joti_one_regular" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/urgentNotificationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:background="@drawable/notification_emergency_card"
        android:padding="10dp"
        android:layout_below="@id/main_head"
        android:layout_marginTop="-20dp">

        <ImageView
            android:id="@+id/notification_emergency_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/notification_emergency_icon"
            />

        <TextView
            android:id="@+id/check_in_no"
            android:layout_width="229.03dp"
            android:layout_height="27.97dp"
            android:layout_toEndOf="@+id/notification_emergency_icon"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/check_in_now_gate_d34"
            android:textAppearance="@style/inter_medium"
            android:textSize="16sp"
            android:textColor="#4C76EB"
            android:gravity="top"
            />

        <TextView
            android:id="@+id/notification_emergency_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/check_in_no"
            android:layout_toEndOf="@+id/notification_emergency_icon"
            android:layout_marginStart="10dp"
            android:text="@string/your_flight"
            android:textSize="10sp"
            android:textColor="#6C757D"
            android:textAppearance="@style/inter_medium"
            android:gravity="top"
            />

        <ImageView
            android:id="@+id/notification_emergency_star_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/material_symbols_star"
            android:layout_below="@+id/notification_emergency_description"
            android:layout_toEndOf="@+id/notification_emergency_icon"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/some_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/some_id"
            android:textAppearance="@style/inter_medium"
            android:layout_toEndOf="@+id/notification_emergency_star_icon"
            android:layout_below="@+id/notification_emergency_description"
            android:layout_marginTop="8dp"
            android:layout_marginStart="5dp"
            android:textSize="12sp"
            android:textColor="#6C757D"
            android:gravity="top"
            />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notification_cards"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/urgentNotificationLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="16dp"
        android:scrollbars="vertical"
        />
</RelativeLayout>