<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="@drawable/main_1">
  <!-- Auto layout, variables, and unit scale are not yet supported -->
  <RelativeLayout
      android:id="@+id/main_head"
      android:layout_width="match_parent"
      android:layout_height="210dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:background="@drawable/main_head"
      android:clipToOutline="true">

    <ImageView
        android:id="@+id/main_head_01"
        android:layout_width="194dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="-67dp" />

    <ImageView
        android:id="@+id/main_head_02"
        android:layout_width="168dp"
        android:layout_height="157dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="243dp"
        android:layout_marginTop="-54dp" />
    <!-- Auto layout, variables, and unit scale are not yet supported -->

    <ImageView
        android:id="@+id/ellipse_3"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="298dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/main1_rectangle"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_background"
        android:clipToOutline="true" />


    <TextView
        android:id="@+id/hi_huang"
        android:layout_width="140.62dp"
        android:layout_height="74dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="40dp"
        android:gravity="top"
        android:text="@string/hi_huang"
        android:textAppearance="@style/hi_huang" />

    <RelativeLayout
        android:id="@+id/selection"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="132dp">

      <RelativeLayout
          android:id="@+id/attractions"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:background="@drawable/select_item"
          android:elevation="47dp" >
        <!-- Auto layout, variables, and unit scale are not yet supported -->
        <RelativeLayout
            android:id="@+id/fork_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="9dp"
            android:layout_centerVertical="true"
            android:background="@drawable/main1_fork"
            android:clipToOutline="true" />
        <!-- Auto layout, variables, and unit scale are not yet supported -->
        <TextView
            android:id="@+id/attractions_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:lineSpacingExtra="-2sp"
            android:text="@string/attraction"
            android:textAppearance="@style/select_item" />
      </RelativeLayout>

      <RelativeLayout
          android:id="@+id/hotels"
          android:layout_width="90dp"
          android:layout_height="58dp"
          android:layout_marginLeft="130dp"
          android:background="@drawable/select_item"
          android:elevation="47dp">
        <RelativeLayout
            android:id="@+id/home_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:layout_centerVertical="true"
            android:background="@drawable/main1_home"
            android:clipToOutline="true" />
        <!-- Auto layout, variables, and unit scale are not yet supported -->
        <TextView
            android:id="@+id/hotel_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:lineSpacingExtra="-2sp"
            android:text="@string/hotel"
            android:textAppearance="@style/select_item" />

      </RelativeLayout>

      <RelativeLayout
          android:id="@+id/flight"
          android:layout_width="100dp"
          android:layout_height="58dp"
          android:layout_marginLeft="260dp"
          android:background="@drawable/select_item"
          android:elevation="47dp">
        <RelativeLayout
            android:id="@+id/flight_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:layout_centerVertical="true"
            android:background="@drawable/main1_home"
            android:clipToOutline="true" />
        <!-- Auto layout, variables, and unit scale are not yet supported -->
        <TextView
            android:id="@+id/flight_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:lineSpacingExtra="-2sp"
            android:text="@string/hotel"
            android:textAppearance="@style/select_item" />

      </RelativeLayout>
    </RelativeLayout>

  </RelativeLayout>
  <!-- Auto layout, variables, and unit scale are not yet supported -->
</RelativeLayout>